app-in-apps/yaml/plane/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plane-ingress
  namespace: plane
  labels:
    app: plane
  annotations:
    kubernetes.io/ingress.class: haproxy
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  ingressClassName: haproxy
  rules:
    - host: plane.nexus-core.dev
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: my-plane-web
                port:
                  number: 3000
  tls:
    - hosts:
        - plane.nexus-core.dev
      secretName: plane-ingress-secret
